[gd_scene load_steps=2 format=3 uid="uid://buploetik72tn"]

[ext_resource type="Script" uid="uid://8m44lqk33sum" path="res://components/toolbar/toolbar.gd" id="1_8jbs5"]

[node name="Toolbar" type="PanelContainer" groups=["Toolbar"]]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_8jbs5")

[node name="ToolbarSplit" type="HSplitContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ToolbarSplit"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ToolbarSplit/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ReturnButton" type="Button" parent="ToolbarSplit/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="ToolbarSplit/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PreviousButton" type="Button" parent="ToolbarSplit/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 21
text = "<"

[node name="NextButton" type="Button" parent="ToolbarSplit/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 21
text = ">"

[node name="SlideSlider" type="HSlider" parent="ToolbarSplit/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(255, 0)
layout_mode = 2
size_flags_vertical = 1
rounded = true

[node name="CountLabel" type="Label" parent="ToolbarSplit/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 26
text = "999/999"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ToolbarSplit/VBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="ToolbarSplit/VBoxContainer/HBoxContainer/HBoxContainer/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="ToolbarSplit/VBoxContainer/HBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
